# GNAT

./: .dockerignore  .env.example  .gitignore  .pylintrc  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CTM-SAK-Presentation.pptx  DCO.md  EXAMPLES.md  EXAMPLES_COPILOT.md  GNAT-Presentation.pptx  GNAT-gui-plan.md  IMPLEMENTATION_PLAN.md  MANIFEST.in  Makefile  NOTICE.md  PENDING_ITEMS.md  POLISH_CHANGELOG.md  README.md  SECURITY.md  alembic.ini  coverage.json  crossinvestigation-plan.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/copilot/: review-instructions.md
.github/workflows/: bandit.yml  codeql.yml  connector-maintenance-phase2.yml  connector-maintenance.yml  dco_check.yml  dependency-review.yml  jekyll-gh-pages.yml  normalization-regression.yml  pylint.yml  python-lint-fast.yml  python-security.yml  python-tests.yml  python-typecheck.yml  quality-agents.yml  rust.yml  secrets-hygiene.yml  security-hygiene.yml
alembic/: env.py
alembic/versions/: 0001_init_all_tables.py  0002_add_lineage_events.py  0003_add_metrics_events.py  0004_add_execution_log.py  0005_add_idempotency.py  0006_add_agent_tables.py  0007_workspace_trust_boundary.py  0008_query_cost_log.py  0009_workflow_runs.py  0010_add_rule_firing_audit.py
config/: config.ini.example  secrets_policy.example.yaml
config/security/: secrets_policy.example.yaml
docker/edl/: Dockerfile
docker/monitor/: Dockerfile
docker/scheduler/: Dockerfile
docker/test/: docker-compose.test.yml  gnat.test.ini
docs/: Documentation-Standards.md  Makefile  README.md  _config.yml  architecture.md  diagram.html  gnat-theme.css  index.html  workflow.html
docs/_diagrams/: README.md  generate_ai_agents.py  generate_all.py  generate_connector_arch.py  generate_ingest_pipeline.py  generate_system_overview.py
docs/architecture/: implementation-plan.md
docs/deck/: index.html
docs/explanation/: README.md  confirmation-broker.md  cross-tool-investigation-model.md  rule-engine.md
docs/how-to/: README.md  agent-governance.md  authoring-rules.md  build-investigations.md  configure-confirmation-policies.md  connect-to-platforms.md  copilot-assistant.md  create-intelligence-reports.md  disseminate-intelligence.md  export-indicators.md  generate-reports.md  incident-to-campaign-intelligence.md  run-ingest-pipeline.md  schedule-feeds.md  use-abuse-ch-feeds.md  use-ai-agents.md  use-analysis-layer.md  use-async-client.md  use-execution-context.md  use-reasoning-engine.md  use-research-library.md  use-workspaces.md  visualize-data.md  work-with-stix-objects.md
docs/reference/: README.md  configuration.md  investigation-context-schema.md  rule-engine-spec.md
docs/releases/: v0.1.0.md  v0.3.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md
docs/source/: async.rst  cli.rst  clients.rst  conf.py  configuration.rst  index.rst  ingest.rst  orm.rst  quickstart.rst
docs/sphinx-html/: requirements.txt
docs/templates/: adr-template.md  explanation-template.md  howto-template.md  reference-template.md  tutorial-template.md
docs/tutorials/: README.md  analyst-intelligence-workflow.md  daily-soc-workflow.md  incident-to-campaign-intelligence.md  investigation_xsoar_tq_gm_powerbi.py  production-scheduled-pipeline.md  your-first-rule.md
examples/: controlup_ip_geo_investigation.py  investigation_xsoar_tq_gm_powerbi.py
gnat/: __init__.py  _core.pyi  client.py  config.py  streaming.py
gnat/agents/: __init__.py  assistant_analyst.py  base.py  catalog.py  claude.py  conversations.py  copilot.py  copilot_audit.py  copilot_connector.py  copilot_governor.py  copilot_investigation.py  copilot_prompts.py  copilot_review.py  copilot_workflows.py  embeddings.py  gemini.py  governor.py  health_monitor.py  hitl.py  hypothesis_refinement.py  llm.py  openai_compatible.py  parsing.py  prompts.py  research.py  steps.py  triggers.py  workflow.py  workflow_store.py
gnat/analysis/: __init__.py  confidence.py  graph.py  query.py  stats.py  timeline.py  tlp.py  trends.py
gnat/analyst_services/: __init__.py  analysis.py  context.py  exceptions.py  investigations.py  reporting.py  rules.py
gnat/async_client/: __init__.py  base.py  client.py  connectors.py
gnat/auth/: __init__.py  config.py  device_code.py  identity.py  oidc.py
gnat/cli/: __init__.py  copilot_cli.py  main.py
gnat/clients/: __init__.py  base.py
gnat/codegen/: __init__.py  bulk_tester.py  config_docs_generator.py  contribute.py  openapi_generator.py  registry_sync.py  test_generator.py  xsoar_generator.py
gnat/connectors/: __init__.py  base_connector.py  health.py
gnat/context/: __init__.py  global_context.py  store.py  tenant.py  workspace.py
gnat/core/: __init__.py  context.py  domains.py
gnat/dissemination/: __init__.py  export.py  notify.py
gnat/export/: __init__.py  base.py  filters.py  jobs.py
gnat/federation/: __init__.py  peer.py  scheduler.py  sync.py  topology.py
gnat/ingest/: __init__.py  _ioc_classifier.py  base.py
gnat/investigations/: __init__.py  builder.py  correlator.py  model.py  normalizer.py  workspace.py
gnat/jobs/: __init__.py  decorators.py  models.py  registry.py  runner.py  store.py
gnat/lineage/: __init__.py  models.py  store.py  tracker.py
gnat/logrhythm/: client.py
gnat/metrics/: __init__.py  aggregator.py  collector.py  hooks.py  models.py
gnat/migrations/: __init__.py  cli.py
gnat/nlp/: __init__.py  builtin.py  claude_backend.py  parser.py  query_spec.py
gnat/orm/: __init__.py  attack_pattern.py  base.py  campaign.py  indicator.py  malware.py  observable.py  relationship.py  threat_actor.py  vulnerability.py
gnat/plugins/: __init__.py  base.py  hooks.py  loader.py  registry.py
gnat/policy/: __init__.py  engine.py  middleware.py  models.py
gnat/reasoning/: __init__.py  engine.py  hypothesis.py
rust_core/: .gitignore  Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
scripts/: build_presentation.js  package-lock.json  package.json
site/: index.html
tests/: conftest.py
(+976 files in other folders)
