[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "security-gnat"
version     = "1.9.0"
description = "A production-ready Python library for unified threat intelligence operations across 158 security platforms."
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [{ name = "GNAT Contributors" }]
keywords    = ["cybersecurity","threat-intelligence","stix","taxii","ioc","siem","soar","trellix","sophos","vectra","extrahop","darktrace","lansweeper","censys","servicenow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies    = ["urllib3>=2.0"]

[project.optional-dependencies]
yaml   = ["pyyaml>=6.0"]
taxii  = ["taxii2-client>=2.3"]
rss    = ["feedparser>=6.0"]
ingest = ["taxii2-client>=2.3", "feedparser>=6.0"]
async  = ["httpx>=0.27"]
persist   = ["sqlalchemy>=2.0"]
analysis  = ["sqlalchemy>=2.0"]                                       # Investigation + Report persistence
reporting = ["sqlalchemy>=2.0"]                                       # Report lifecycle persistence
schedule  = ["croniter>=2.0"]
agents    = []
research  = []
fast      = []  # Install gnat-core native Rust wheel separately: pip install "gnat[fast]" + gnat-core wheel
migrations    = ["alembic>=1.13", "sqlalchemy>=2.0"]              # Alembic DB migrations (gnat db CLI)
orchestration = ["sqlalchemy>=2.0"]                               # Agent workflow engine + lineage
reports   = ["reportlab>=4.0", "python-docx>=1.1"]   # PDF + DOCX (pure Python, no Node.js)
viz    = ["plotly>=5.20", "networkx>=3.0", "openpyxl>=3.1"]
serve          = ["fastapi>=0.111", "uvicorn>=0.30"]
taxii-server   = ["fastapi>=0.111", "uvicorn>=0.30"]    # TAXII 2.1 server (gnat.dissemination.taxii)
dissemination  = ["fastapi>=0.111", "uvicorn>=0.30", "sqlalchemy>=2.0"]  # Full dissemination layer
tui    = ["textual>=0.60"]
telemetry  = ["kafka-python-ng>=2.2", "redis>=5.0"]       # High-volume sensor ingestion (Kafka + Redis dedup)
rules      = ["hy>=1.0"]                                  # Hy-based analysis rule engine for hypothesis evaluation
nlp    = []  # builtin backend has no deps; claude backend uses existing [agents] client
stix-validate = ["stix2-patterns>=1.3"]  # full ANTLR grammar for strict STIX pattern validation
dev    = [
    "pytest>=7.4", "pytest-cov>=4.1", "pytest-mock>=3.11",
    "pyyaml>=6.0", "taxii2-client>=2.3", "feedparser>=6.0",
    "ruff>=0.4", "mypy>=1.9", "httpx>=0.27", "sqlalchemy>=2.0",
    "plotly>=5.20", "networkx>=3.0", "openpyxl>=3.1",
    "fastapi>=0.111", "uvicorn>=0.30", "textual>=0.60",
    "reportlab>=4.0", "python-docx>=1.1",
    "types-PyYAML",
]
all = ["pyyaml>=6.0", "taxii2-client>=2.3", "feedparser>=6.0", "httpx>=0.27", "sqlalchemy>=2.0", "croniter>=2.0", "reportlab>=4.0", "python-docx>=1.1", "plotly>=5.20", "networkx>=3.0", "openpyxl>=3.1", "fastapi>=0.111", "uvicorn>=0.30"]

[project.scripts]
gnat-codegen = "gnat.codegen.openapi_generator:_main"
gnat = "gnat.cli.main:main"
gnat-db = "gnat.migrations.cli:main"

[project.entry-points."gnat.plugins"]
# Third-party plugins declare themselves here, e.g.:
# my-platform = "gnat_plugin_myplatform:MyPlugin"

[tool.setuptools.packages.find]
where   = ["."]
include = ["gnat*"]

[tool.setuptools.package-data]
"gnat" = ["py.typed"]
"gnat.reporting" = ["templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "gnat/connectors/qradar/tests",
    "gnat/connectors/elastic",
    "gnat/connectors/misp/tests",
    "gnat/connectors/sentinel/tests",
    "gnat/connectors/graylog/tests",
    "gnat/connectors/ossim/tests",
    "gnat/connectors/security_onion/tests",
    "gnat/connectors/suricata/tests",
    "gnat/connectors/wazuh",
]
addopts   = "-v --tb=short -p no:warnings"
markers   = [
    "integration: live API tests requiring real credentials (opt-in with --run-integration)",
    "docker: Docker-based integration tests requiring a running Docker daemon (opt-in with --run-docker)",
    "slow: tests that take >5s",
]

[tool.coverage.run]
source = ["gnat"]
omit   = ["tests/*", "gnat/codegen/*", "gnat/connectors/*/tests/*", "gnat/connectors/*/test_*.py"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError", "if TYPE_CHECKING", "pass"]
show_missing = true
fail_under   = 70

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B904", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*"             = ["F841", "S101"]
"gnat/codegen/*"   = ["E501"]

[tool.mypy]
python_version         = "3.9"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
