[package]
name    = "gnat-core"
version = "0.1.0"
edition = "2021"

[lib]
name  = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.24", features = ["extension-module"] }
regex  = "1.10"
once_cell = "1.19"

[profile.release]
opt-level  = 3
lto        = true
codegen-units = 1
strip      = true
