[build-system]
requires    = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name    = "gnat-core"
version = "0.1.0"
requires-python = ">=3.9"
description = "Native Rust acceleration layer for GNAT"

[tool.maturin]
# Place the compiled .so inside the gnat package so it is importable as gnat._core
python-packages = []
module-name     = "gnat._core"
